kubernetes/manifests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llamacpp
  namespace: ns-llama
  labels:
    app: llamacpp
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: llamacpp
  template:
    metadata:
      labels:
        app: llamacpp
    spec:
      imagePullSecrets:
        - name: harbor-registry-pull-secret
      volumes:
        - name: cache-volume
          persistentVolumeClaim:
            claimName: llamacpp-models
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 16G
      hostNetwork: true
      hostIPC: true
      containers:
        - name: llamacpp
          image: registry.arkprojects.space/apps/llama.cpp:full-rocm-6.3.4-gfx906-patch1
          #image: registry.arkprojects.space/apps/llama.cpp:full-rocm-6.4.1-gfx906-patch1
          imagePullPolicy: Always
          securityContext:
            seccompProfile:
              type: Unconfined
            runAsGroup: 0
            capabilities:
              add:
                - SYS_PTRACE
          command: [ "/bin/sh", "-c" ]
          args: [ "sleep inf" ]
          ports:
            - containerPort: 8000
          resources:
            limits:
              amd.com/gpu: "2"
            requests:
              cpu: "6"
              memory: 6G
              amd.com/gpu: "2"
          volumeMounts:
            - mountPath: /root/.cache/huggingface
              name: cache-volume
            - name: shm
              mountPath: /dev/shm
---
apiVersion: v1
kind: Service
metadata:
  name: llamacpp-server
  namespace: ns-llama
spec:
  selector:
    app: llamacpp
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llamacpp-server
  namespace: ns-llama
spec:
  tls:
    - hosts:
        - "llamacpp.arkprojects.space"
      secretName: arkprojects.space-cert-prod
  rules:
    - host: "llamacpp.arkprojects.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llamacpp-server
                port:
                  number: 8000
---
